--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<div class="container">
-    <div class="row">
-      <div class="col-md-12">
-          <img src="logo.jpg" height="300">
-          <h1 class="text-center">Boston Cannons Lacrosse 2014!!!</h1>
-      </div>
+<div class="container" align="center">
+                    <h1>Boston Cannons Lacrosse 2014!!!</h1>
+<p class="text-center">
+          <img src="logo.jpg" height="300px">
+          </p>
     </div>
     <div class="row">
       <div class="col-md-9">
