--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <div class="container" align="center">
-                    <h1>Boston Cannons Lacrosse 2014!!!</h1>
-<p class="text-center">
-          <img src="logo.jpg" height="300px">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center">
+          <p>
+          <h1>Boston Cannons Lacrosse 2014!!!</h1>
           </p>
+          <img src="logo.jpg" height="300px"> 
+        </div>
+      </div>
     </div>
+   
+
     <div class="row">
       <div class="col-md-9">
         <div id="summary">
