--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container" align="center">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <div class="text-center">
           <p>
           <h1>Boston Cannons Lacrosse 2014!!!</h1>
@@ -25,7 +25,7 @@
    
 
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-xs-9">
         <div id="summary">
           <h4>2014 Schedule</h4>
          <table class="table table-striped table-hover table-bordered">
@@ -45,10 +45,48 @@
               <td>May 30</td>
               <td>Lizards</td>
             </tr>
+            <tr>
+              <td>June 6</td>
+              <td>Machine</td>
+            </tr>
+            <tr>
+              <td>June 14</td>
+              <td>Bayhawks</td>
+            </tr>
+            <tr>
+              <td>June 21</td>
+              <td>Machine</td>
+            </tr>
+            <tr>
+              <td>June 28</td>
+              <td>Hounds</td>
+            </tr>
+              <tr>
+              <td>July 4</td>
+              <td>Outlaws</td>
+            </tr>
+              <tr>
+              <td>July 19</td>
+              <td>Lizards</td>
+            </tr>
+              <tr>
+              <td>July 26</td>
+              <td>Launch</td>
+            </tr>
+            </tr>
+              <tr>
+              <td>August 2</td>
+              <td>Launch</td>
+            </tr>
+            </tr>
+              <tr>
+              <td>August 9</td>
+              <td>Rattlers</td>
+            </tr>
           </table>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-xs-3">
         <div id="skills">
           <h4>Roster</h4>
           <table class="table table-striped table-hover table-bordered">
@@ -67,6 +105,82 @@
             <tr class="success">
               <td>12</td>
               <td>Bowes</td>
+            </tr>
+             <tr>
+              <td>27</td>
+              <td>Buchanan</td>
+            </tr>
+             <tr>
+              <td>22</td>
+              <td>Bunker</td>
+            </tr>
+             <tr>
+              <td>5</td>
+              <td>Burke</td>
+            </tr>
+             <tr>
+              <td>21</td>
+              <td>Connolly</td>
+            </tr>
+             <tr>
+              <td>24</td>
+              <td>Eck</td>
+            </tr>
+             <tr>
+              <td>42</td>
+              <td>Emery</td>
+            </tr>
+             <tr>
+              <td>19</td>
+              <td>Kaut</td>
+            </tr>
+             <tr>
+              <td>1</td>
+              <td>Manny</td>
+            </tr>
+             <tr>
+              <td>55</td>
+              <td>Martin</td>
+            </tr>
+             <tr>
+              <td>72</td>
+              <td>McWilliams</td>
+            </tr>
+             <tr>
+              <td>17</td>
+              <td>Merrill</td>
+            </tr>
+             <tr>
+              <td>3</td>
+              <td>Porter</td>
+            </tr>
+             <tr>
+              <td>99</td>
+              <td>Rabil</td>
+            </tr>
+             <tr>
+              <td>2</td>
+              <td>Ratliff</td>
+            </tr>
+             <tr>
+              <td>43</td>
+              <td>Reilly</td>
+            </tr>
+             <tr>
+              <td>11</td>
+              <td>Smalley</td>
+            </tr>
+             <tr>
+              <td></td>
+              <td>Smith</td>
+            </tr>
+             <tr>
+              <td>41</td>
+              <td>Stone</td>
+            </tr>
+            <tr>
+              <td>77</td>
+              <td>Sweeney</td>
             </tr>
           </table>
           </div>
